--- a/ProjetoEventos/Nodejs/nodeEventos/views/eventos/menu.ejs
+++ b/ProjetoEventos/Nodejs/nodeEventos/views/eventos/menu.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Cadastro de Eventos e Convidados - Menu de Opções</title>
+    <title>Cadastro de Eventos</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 
@@ -25,6 +25,10 @@
             </li>
             <li>
                 <a href="/listaEventos">Lista de Eventos</a>
+            </li>
+            <li>
+                <a href="/listaEventosWS">Lista de Eventos
+                    (WebService)</a>
             </li>
         </ul>
     </section>
