--- a/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.html
+++ b/ProjetoEventos/Mean_Angular/appAngular/src/app/app.component.html
@@ -4,9 +4,30 @@
     <span>Curso MEAN</span>
 
     <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#eventos">Eventos</a></li>
-        <li><a href="#pagamentos">Pagamentos</a></li>
+        <li>
+            <a routerLink="/home" routerLinkActive="active">
+                <span class="icon">
+                    <ion-icon name="home-outline"></ion-icon>
+                </span>
+                <span class="text">Home</span>
+            </a>
+        </li>
+        <li>
+            <a routerLink="/eventos" routerLinkActive="active">
+                <span class="icon">
+                    <ion-icon name="rocket-outline"></ion-icon>
+                </span>
+                <span class="text">Eventos</span>
+            </a>
+        </li>
+        <li>
+            <a routerLink="/pagamentos" routerLinkActive="active">
+                <span class="icon">
+                    <ion-icon name="wallet-outline"></ion-icon>
+                </span>
+                <span class="text">Pagamentos</span>
+            </a>
+        </li>
     </ul>
 </div>
 
